Fixed boss movement on smaller devices

--- a/src/Pages/maingame/MainGame.module.scss
+++ b/src/Pages/maingame/MainGame.module.scss
@@ -122,6 +122,7 @@
 .bomb {
   width: 100%;
   height: 100%;
+  animation-fill-mode: forwards;
 }
 
 @media only screen and (max-device-height: 576px) and (orientation: landscape) {
